tests/cases/literals/errors/i8-literal-range.ari
fn main() -> i64 {
  let tiny: i8 = -129;
  return 0;
}
